kubernetes-manifests/accounts-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: accounts
    tier: db
  name: accounts-db
spec:
  ports:
    - name: tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: accounts-db
    application: bank-of-anthos
    environment: development
    team: accounts
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: accounts
    tier: db
  name: accounts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      application: bank-of-anthos
      environment: development
      team: accounts
      tier: db
  serviceName: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
        application: bank-of-anthos
        environment: development
        team: accounts
        tier: db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: environment-config
            - configMapRef:
                name: accounts-db-config
            - configMapRef:
                name: demo-data-config
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/accounts-db:v0.6.7@sha256:d1f7b4b42fbbad5b3f8c85c67a15f4e27cc9a054ae8bc2379e3f0319e313ce9d
          name: accounts-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres
      serviceAccount: bank-of-anthos
      serviceAccountName: default
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: accounts-db-pvc
