kubernetes-manifests/ai-meta-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-meta-db
spec:
  selector:
    app: ai-meta-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ai-meta-db
spec:
  serviceName: ai-meta-db
  replicas: 1
  selector:
    matchLabels:
      app: ai-meta-db
  template:
    metadata:
      labels:
        app: ai-meta-db
    spec:
      containers:
        - name: postgres
          image: ai-meta-db:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: ai-meta-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: ai-meta-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
