kubernetes-manifests/ledger-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: ledger
    tier: db
  name: ledger-db
spec:
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
  selector:
    app: ledger-db
    application: bank-of-anthos
    environment: development
    team: ledger
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: ledger
    tier: db
  name: ledger-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-db
      application: bank-of-anthos
      environment: development
      team: ledger
      tier: db
  serviceName: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
        application: bank-of-anthos
        environment: development
        team: ledger
        tier: db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: environment-config
            - configMapRef:
                name: ledger-db-config
            - configMapRef:
                name: demo-data-config
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/ledger-db:v0.6.7@sha256:9b4009cfd17929ee165d55326bcf8ccf0f65039b1a467b847197c8404f462b7d
          name: postgres
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres
      serviceAccount: bank-of-anthos
      serviceAccountName: default
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: ledger-db-pvc
